# pm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai.py  auth.py  auth_repository.py  config.py  deps.py  errors.py  main.py  models.py  repository.py  service.py
backend/migrations/: 0001_extensions.sql  0002_kanban_schema.sql  0003_seed_demo_user.sql  0004_auth_and_sessions.sql
backend/static/: __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/static/404/: index.html
backend/static/_next/static/chunks/: 0b5e2b816e92af3c.css  251fb4c45632be3e.js  fe8f2e504c06c02f.js  turbopack-ead2077959526d5f.js
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html
backend/tests/: test_ai_client.py  test_main_static.py  test_routes.py  test_service.py
docs/: PART5_SUPABASE_SCHEMA.md  PLAN.md  PROGRESS.md  code_review.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  AdminPanel.tsx  ChangePasswordForm.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/lib/: adminApi.ts  (+5 more)
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
