[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.57.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
